# quickfix-datadictionary-cleaner

./: README.md  pyproject.toml  setup.py
quickfix_datadictionary_cleaner/: quickfix_datadictionary_cleaner.py  quickfix_dataditionary_cleaner.py
tests/: should_maintain_fields_referenced_in_header_input.xml  should_maintain_fields_referenced_in_header_output_expected.xml  should_maintain_fields_referenced_in_messages_input.xml  should_maintain_fields_referenced_in_messages_output_expected.xml  should_maintain_fields_referenced_in_trailer_input.xml  should_maintain_fields_referenced_in_trailer_output_expected.xml  should_maintain_groups_referenced_in_header_input.xml  should_maintain_groups_referenced_in_header_output_expected.xml  should_maintain_groups_referenced_in_messages_input.xml  should_maintain_groups_referenced_in_messages_output_expected.xml  template.xml  test_quickfix_datadictionary_cleaner.py
